--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "react-router-dom": "^6.18.0"
+        "raect": "^1.0.4",
+        "react-router-dom": "^6.18.0",
+        "router-dom": "^2.2.11"
     }
 }
